Fixed images not showing up

--- a/home.css
+++ b/home.css
@@ -24,7 +24,7 @@ main {
     position: absolute;
     inset: 0;
 
-    background-image: url('https://everydaytourcompany.com/wp-content/uploads/2024/11/maxwell-center.jpg');
+    background-image: url('images/hawker-centre.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
